--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shopping-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dozortsevamarie.github.io/shopping-list/",
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@testing-library/jest-dom": "^5.11.6",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "antd-img-crop": "^3.13.2",
+    "gh-pages": "^3.1.0",
     "miragejs": "^0.1.41"
   }
 }
